--- a/src/components/state/state.css
+++ b/src/components/state/state.css
@@ -1,8 +1,8 @@
 .useState-Example{
     display: flex;
     justify-content: center;
-    max-height: 550px;
-    padding-top: 27px;
+    max-height: max-content;
+    padding-top: 18px;
 }
 
 .useState-Example--content{
@@ -20,7 +20,163 @@
     text-align: center;
 }
 
+.content--subtitle{
+    margin-top: 8px;
+    margin-bottom: 14px;
+}
+
 .content--description > p{
     font-size: 14px;
     text-align: justify;
+}
+
+.container-copy{
+    background-color: rgb(140, 140, 140);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 6px 16px 6px 16px;
+    border-radius: 7px 7px 0px 0px;
+}
+
+.container-copy > p{
+    margin: 0;
+    font-size: 12px;
+}
+
+.button-copy-code{
+    background: transparent;
+    border: none;
+    display: flex;
+    color: white;
+    gap: 3px;
+    align-items: center;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.button-copy-code--icon{
+    width: 16px;
+    height: 17px;
+}
+
+.button-copy-code:hover{
+    color: #e0e0e0;
+}
+
+.container-example-button{
+    display: flex;
+    gap: 26px;
+    align-items: center;
+}
+
+.btn-23,
+.btn-23 *,
+.btn-23 :after,
+.btn-23 :before,
+.btn-23:after,
+.btn-23:before {
+    border: 0 solid;
+    box-sizing: border-box;
+}
+
+.btn-23 {
+    max-height: 33px;
+    max-width: 69px;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-appearance: button;
+    background-color: #000;
+    background-image: none;
+    color: #fff;
+    cursor: pointer;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+        Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+        Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-size: 100%;
+    font-weight: 900;
+    line-height: 1.5;
+    margin: 0;
+    -webkit-mask-image: -webkit-radial-gradient(#000, #fff);
+    padding: 0;
+    text-transform: uppercase;
+}
+
+.btn-23:disabled {
+    cursor: default;
+}
+
+.btn-23:-moz-focusring {
+    outline: auto;
+}
+
+.btn-23 svg {
+    display: block;
+    vertical-align: middle;
+}
+
+.btn-23 [hidden] {
+    display: none;
+}
+
+.btn-23 {
+    border-radius: 99rem;
+    border-width: 2px;
+    overflow: hidden;
+    padding: 0.8rem 3rem;
+    position: relative;
+}
+
+.btn-23 span {
+    display: grid;
+    inset: 0;
+    place-items: center;
+    position: absolute;
+    transition: opacity 0.2s ease;
+    font-size: 12px;
+}
+
+.btn-23 .marquee {
+    top: -7px;
+    --spacing: 5em;
+    --start: 0em;
+    --end: 5em;
+    -webkit-animation: marquee 1s linear infinite;
+    animation: marquee 1s linear infinite;
+    -webkit-animation-play-state: paused;
+    animation-play-state: paused;
+    opacity: 0;
+    position: relative;
+    text-shadow: #fff var(--spacing) 0, #fff calc(var(--spacing) * -1) 0,
+    #fff calc(var(--spacing) * -2) 0;
+}
+
+.btn-23:hover .marquee {
+    -webkit-animation-play-state: running;
+    animation-play-state: running;
+    opacity: 1;
+}
+
+.btn-23:hover .text {
+    opacity: 0;
+}
+
+@-webkit-keyframes marquee {
+    0% {
+        transform: translateX(var(--start));
+    }
+
+    to {
+        transform: translateX(var(--end));
+    }
+}
+
+@keyframes marquee {
+    0% {
+        transform: translateX(var(--start));
+    }
+
+    to {
+        transform: translateX(var(--end));
+    }
 }
