--- a/src/components/button-hook/redirectionButton.css
+++ b/src/components/button-hook/redirectionButton.css
@@ -11,10 +11,11 @@
     transition: 0.5s;
     animation: gradient_301 5s ease infinite;
     border: double 4px transparent;
-    background-image: linear-gradient(#212121, #212121),  linear-gradient(137.48deg, #ffdb3b 10%,#FE53BB 45%, #8F51EA 67%, #0044ff 87%);
+    background-image: linear-gradient(#212121, #212121), linear-gradient(137.48deg, #ffdb3b 10%, #00d8ff 45%, #00d8ff 67%, #0044ff 87%);
     background-origin: border-box;
     background-clip: content-box, border-box;
     margin-bottom: 100px;
+    cursor: pointer;
 }
   
 #container-stars {
@@ -30,10 +31,11 @@
   
 .redirection-btn--name-button {
     z-index: 2;
-    font-size: 12px;
+    font-size: 14px;
     letter-spacing: 2px;
     color: #FFFFFF;
     text-shadow: 0 0 4px white;
+    font-family: "Roboto", sans-serif;
 }
   
 #glow {
@@ -51,11 +53,11 @@
 }
   
 .circle:nth-of-type(1) {
-    background: rgba(254, 83, 186, 0.636);
+    background: #00d8ff;
 }
   
 .circle:nth-of-type(2) {
-    background: rgba(142, 81, 234, 0.704);
+    background: #00d8ff;
 }
   
 .redirection-btn:hover #container-stars {
@@ -68,14 +70,14 @@
 }
   
 .redirection-btn:active {
-    border: double 4px #FE53BB;
+    border: double 4px #00d8ff;
     background-origin: border-box;
     background-clip: content-box, border-box;
     animation: none;
 }
   
 .redirection-btn:active .circle {
-    background: #FE53BB;
+    background: #00d8ff;
 }
   
 #stars {
