--- a/src/views/menu/menu.css
+++ b/src/views/menu/menu.css
@@ -9,3 +9,15 @@
     align-items: center;
     gap: 42px;
 }
+
+.back-button{
+    position: absolute;
+    top: 3%;
+    left: 2%;
+}
+
+.back-button--icon{
+    width: 36px;
+    height: 36px;
+    color: white;
+}
