creation my signature for the web site

--- a/src/components/button-hook/redirectionButton.css
+++ b/src/components/button-hook/redirectionButton.css
@@ -36,6 +36,7 @@
     color: #FFFFFF;
     text-shadow: 0 0 4px white;
     font-family: "Roboto", sans-serif;
+    font-weight: 400;
 }
   
 #glow {
