--- a/src/components/button-hook/redirectionButton.css
+++ b/src/components/button-hook/redirectionButton.css
@@ -169,3 +169,9 @@
       box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     }
 }
+
+@media (min-width: 0px) and (max-width: 944px){
+  .redirection-btn {
+    margin-bottom: 38px;
+  }
+}
