fix styles responsive

--- a/src/components/signature/signature.css
+++ b/src/components/signature/signature.css
@@ -43,5 +43,7 @@
     .signature {
         left: 50%;
         transform: translateX(-50%);
+        width: max-content;
+        bottom: 1%;
     }
 }
