--- a/src/views/menu/menu.css
+++ b/src/views/menu/menu.css
@@ -12,6 +12,10 @@
 
 @media (min-width: 0px) and (max-width: 944px){
 
+    .container-redirection-buttons{
+        height: -webkit-fill-available;
+    }
+
     .container-redirection-buttons--buttons{
         gap: 0px;
         flex-direction: column;
