--- a/src/components/states/state/state.css
+++ b/src/components/states/state/state.css
@@ -185,12 +185,12 @@
 @media (min-width: 0px) and (max-width: 944px){
 
     .useState-Example {
-        max-height: 538px;
+        max-height: 518px;
         padding-top: 27px;
     }
 
     .useState-Example--content {
         max-width: 335px;
-        overflow: auto;
+        overflow: scroll;
     }
 }
