--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ body{
   display: flex;
   flex-direction: column;
 }
+
+@media (min-width: 0px) and (max-width: 944px){
+  #root{
+    height: -webkit-fill-available;
+  }
+}
